--- a/hs-project-euler.cabal
+++ b/hs-project-euler.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7f61d226e124fc3abb61f87122baa254ef9b41972d8eba48570e4dd1f37767e0
+-- hash: 2c6e0a25ad6f9101ebdf8ed8369667c10752ec419018dba249fac0f9d405d4d1
 
 name:           hs-project-euler
 version:        0.1.0.0
@@ -29,12 +29,16 @@ library
   exposed-modules:
       Lib
       Problem1
+      Problem10
+      Problem11
       Problem2
       Problem3
       Problem4
       Problem5
       Problem6
       Problem7
+      Problem8
+      Problem9
   other-modules:
       Paths_hs_project_euler
   hs-source-dirs:
