--- a/hs-project-euler.cabal
+++ b/hs-project-euler.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0eccbff2d1b5aa914ddd6924d6c1b85716603e406ca762cfc93d15886dd91f10
+-- hash: c354777d21e19c4485e696ef48defd6a490ab42482cf469a6e9fd8b1c035aeee
 
 name:           hs-project-euler
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       Problem15
       Problem16
       Problem17
+      Problem18
       Problem2
       Problem3
       Problem4
